--- a/CmsShoppingCart/appsettings.json
+++ b/CmsShoppingCart/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CmsShoppingCartDbContext": "Server=(localdb)\\mssqllocaldb;Database=CmsShoppingCartDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
